fixed the overflow

--- a/src/styles/home.css
+++ b/src/styles/home.css
@@ -38,6 +38,7 @@
 
 .main-body {
     background-color: rgb(245, 245, 245);
+    overflow: hidden;
 }
 
 .process {
@@ -48,12 +49,6 @@
     font-size: 1.5rem;
     line-height: 1.5;
     padding-top: 75px;
-}
-
-.fade-on-scroll {
-    opacity: 0;
-    transition: all 1.5s;
-    transform: translate(0, 100px);
 }
 
 .process-header {
@@ -87,13 +82,13 @@
 
 .fade-left {
     opacity: 0;
-    transition: all 1.5s;
+    transition: all 2s;
     transform: translate(-100px, 0);
 }
 
 .fade-right {
     opacity: 0;
-    transition: all 1.5s;
+    transition: all 2s;
     transform: translate(100px, 0);
 }
 
