--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -2,12 +2,6 @@ html {
     font-family: "Montserrat", sans-serif;
 }
 
-img {
-    width: 100%;
-    height: auto;
-    margin: auto;
-}
-
 h1 {
     font-size: 7rem;
     font-family: "Montserrat", sans-serif;
